add update and change status service
