# services/todo/handler.go
@@ -7,6 +7,7 @@ import (
 	todo "github.com/ppeymann/todo_be.git"
 	"github.com/ppeymann/todo_be.git/models"
 	"github.com/ppeymann/todo_be.git/server"
+	"github.com/thoas/go-funk"
 )
 
 type handler struct {
@@ -27,6 +28,8 @@ func NewHandler(svc models.TodoService, s *server.Server) models.TodoHandler {
 		group.GET("/", handler.GetAll)
 		group.GET("/:id", handler.GetByID)
 		group.DELETE("/:id", handler.DeleteTodo)
+		group.PUT("/:id", handler.UpdateTodo)
+		group.PATCH("/status/:id/:status", handler.ChangeStatus)
 	}
 
 	return handler
@@ -48,7 +51,7 @@ func NewHandler(svc models.TodoService, s *server.Server) models.TodoHandler {
 func (h *handler) AddTodo(ctx *gin.Context) {
 	in := &models.TodoInput{}
 
-	if err := ctx.ShouldBindBodyWithJSON(in); err != nil {
+	if err := ctx.ShouldBindJSON(in); err != nil {
 		ctx.JSON(http.StatusBadRequest, todo.BaseResult{
 			Errors: []string{todo.ProvideRequiredJsonBody},
 		})
@@ -86,6 +89,7 @@ func (h *handler) GetAll(ctx *gin.Context) {
 // @Accept				json
 // @Produce				json
 //
+// @Param				id			path		string		true		"todo ID"
 // @Success				200			{object}	todo.BaseResult{result=models.TodoEntity}	"always returns status 200 but body contains error"
 // @Router				/{id}		[get]
 // @Security			Bearer Authenticate
@@ -112,6 +116,7 @@ func (h *handler) GetByID(ctx *gin.Context) {
 // @Accept				json
 // @Produce				json
 //
+// @Param				id			path		string		true		"todo ID"
 // @Success				200			{object}	todo.BaseResult{result=string}	"always returns status 200 but body contains error"
 // @Router				/{id}		[delete]
 // @Security			Bearer Authenticate
@@ -126,5 +131,88 @@ func (h *handler) DeleteTodo(ctx *gin.Context) {
 	}
 
 	result := h.service.DeleteTodo(uint(id), ctx)
+	ctx.JSON(result.Status, result)
+}
+
+// UpdateTodo is handler for update a todo task http request.
+//
+// @BasePath			/api/v1/todo
+// @Summary				update todo task
+// @Description			update todo task with specified info and Account ID AND ID
+// @Tags				todos
+// @Accept				json
+// @Produce				json
+//
+// @Param				input		body		models.TodoInput	true	"todo input"
+// @Param				id			path		string		true		"todo ID"
+// @Success				200			{object}	todo.BaseResult{result=models.TodoEntity}	"always returns status 200 but body contains error"
+// @Router				/{id}		[put]
+// @Security			Bearer Authenticate
+func (h *handler) UpdateTodo(ctx *gin.Context) {
+	id, err := server.GetPathUint64(ctx)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, &todo.BaseResult{
+			Errors: []string{"Params Not Supported"},
+		})
+
+		return
+	}
+
+	in := &models.TodoInput{}
+	if err := ctx.ShouldBindJSON(in); err != nil {
+		ctx.JSON(http.StatusBadRequest, &todo.BaseResult{
+			Errors: []string{todo.ProvideRequiredParam},
+		})
+
+		return
+	}
+
+	result := h.service.UpdateTodo(in, uint(id), ctx)
+	ctx.JSON(result.Status, result)
+}
+
+// ChangeStatus is handler for update status a todo task http request.
+//
+// @BasePath			/api/v1/todo
+// @Summary				update status todo task
+// @Description			update status todo task with specified info and Account ID AND ID
+// @Tags				todos
+// @Accept				json
+// @Produce				json
+//
+// @Param				id			path		string		true		"todo ID"
+// @Param				status		path		string		true		"todo status"
+// @Success				200			{object}	todo.BaseResult{result=models.TodoEntity}	"always returns status 200 but body contains error"
+// @Router				/status/{id}/{status}		[patch]
+// @Security			Bearer Authenticate
+func (h *handler) ChangeStatus(ctx *gin.Context) {
+
+	id, err := server.GetPathUint64(ctx)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, &todo.BaseResult{
+			Errors: []string{"Params Not Supported"},
+		})
+
+		return
+	}
+
+	status, err := server.GetStringPath("status", ctx)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, &todo.BaseResult{
+			Errors: []string{"Params Not Supported"},
+		})
+
+		return
+	}
+
+	if !funk.Contains(models.AllStatus, status) {
+		ctx.JSON(http.StatusBadRequest, &todo.BaseResult{
+			Errors: []string{"Error"},
+		})
+
+		return
+	}
+
+	result := h.service.ChangeStatus(status, uint(id), ctx)
 	ctx.JSON(result.Status, result)
 }
